--- a/.github/workflows/D1_CSV_sync.yml
+++ b/.github/workflows/D1_CSV_sync.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0         # fetch full history for proper diff
-          persist-credentials: true  # allow Git push back to repo
+          persist-credentials: true  # use the GITHUB_TOKEN credential for pushing
+          fetch-depth: 0            # fetch full history to allow proper commit
 
       - name: Fetch Schedule CSV from OneDrive
         run: |
@@ -41,12 +41,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add Schedule.csv Adult.csv Devo.csv Rookie.csv Prep.csv
-          # Only commit if there are changes
-          if ! git diff --cached --quiet; then
-            git commit -m "Sync CSVs from OneDrive"
-            git push
-          else
-            echo "No changes to commit"
-          fi
+          git commit -m "Sync CSVs from OneDrive" || echo "No changes to commit"
+          git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
