--- a/.github/workflows/D1_CSV_sync.yml
+++ b/.github/workflows/D1_CSV_sync.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           curl -L "https://onedrive.live.com/download?cid=CB13DF129A4A254C&resid=CB13DF129A4A254C%21seed0922bad0841f1ac4283202a612ad9&format=csv&sheet=Prep" -o Prep.csv
 
+      - name: Configure remote to use token
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/evdventures/D1_OneDrive.git
+
       - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
